--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -138,7 +138,7 @@ body {
   background-color: #82786e !important;
 }
 .bg-warning {
-  background-color: #465052 !important;
+  background-color: #879a9f !important;
 }
 .bg-danger {
   background-color: #b1a374 !important;
@@ -225,8 +225,8 @@ body {
 }
 .btn-warning,
 .btn-warning:active {
-  background-color: #465052 !important;
-  border-color: #465052 !important;
+  background-color: #879a9f !important;
+  border-color: #879a9f !important;
   color: #ffffff !important;
 }
 .btn-warning:hover,
@@ -234,14 +234,14 @@ body {
 .btn-warning.focus,
 .btn-warning.active {
   color: #ffffff !important;
-  background-color: #232829 !important;
-  border-color: #232829 !important;
+  background-color: #617479 !important;
+  border-color: #617479 !important;
 }
 .btn-warning.disabled,
 .btn-warning:disabled {
   color: #ffffff !important;
-  background-color: #232829 !important;
-  border-color: #232829 !important;
+  background-color: #617479 !important;
+  border-color: #617479 !important;
 }
 .btn-danger,
 .btn-danger:active {
@@ -389,22 +389,22 @@ body {
 .btn-warning-outline,
 .btn-warning-outline:active {
   background: none;
-  border-color: #171a1b;
-  color: #171a1b;
+  border-color: #55666b;
+  color: #55666b;
 }
 .btn-warning-outline:hover,
 .btn-warning-outline:focus,
 .btn-warning-outline.focus,
 .btn-warning-outline.active {
   color: #ffffff;
-  background-color: #465052;
-  border-color: #465052;
+  background-color: #879a9f;
+  border-color: #879a9f;
 }
 .btn-warning-outline.disabled,
 .btn-warning-outline:disabled {
   color: #ffffff !important;
-  background-color: #465052 !important;
-  border-color: #465052 !important;
+  background-color: #879a9f !important;
+  border-color: #879a9f !important;
 }
 .btn-danger-outline,
 .btn-danger-outline:active {
@@ -473,7 +473,7 @@ body {
   color: #82786e !important;
 }
 .text-warning {
-  color: #465052 !important;
+  color: #879a9f !important;
 }
 .text-danger {
   color: #b1a374 !important;
@@ -502,7 +502,7 @@ a.text-info:focus {
 }
 a.text-warning:hover,
 a.text-warning:focus {
-  color: #171a1b !important;
+  color: #55666b !important;
 }
 a.text-danger:hover,
 a.text-danger:focus {
@@ -523,7 +523,7 @@ a.text-black:focus {
   background-color: #82786e;
 }
 .alert-warning {
-  background-color: #465052;
+  background-color: #879a9f;
 }
 .alert-danger {
   background-color: #b1a374;
@@ -578,7 +578,7 @@ a:hover {
 }
 .mbr-plan-header.bg-warning .mbr-plan-subtitle,
 .mbr-plan-header.bg-warning .mbr-plan-price-desc {
-  color: #bac2c4;
+  color: #ced6d8;
 }
 .mbr-plan-header.bg-danger .mbr-plan-subtitle,
 .mbr-plan-header.bg-danger .mbr-plan-price-desc {
@@ -1372,10 +1372,10 @@ body {
 .dropup .dropdown-toggle::after {
   display: none;
 }
-.cid-qNa4ZyvOws {
+.cid-qNag5K0EPK {
   background-image: url("../../../assets/images/ogame-2000x1414.jpg");
 }
-.cid-qNa4ZyvOws .mbr-media span {
+.cid-qNag5K0EPK .mbr-media span {
   font-size: 48px;
   cursor: pointer;
   background-color: #ffffff;
@@ -1388,7 +1388,7 @@ body {
   transition: all 0.25s;
   color: #353535;
 }
-.cid-qNa4ZyvOws .mbr-media span.mbri-play:before {
+.cid-qNag5K0EPK .mbr-media span.mbri-play:before {
   position: absolute;
   left: 50%;
   -webkit-transform: translateX(-35%);
@@ -1397,7 +1397,7 @@ body {
   -o-transform: translateX(-35%);
   transform: translateX(-35%);
 }
-.cid-qNa4ZyvOws .modalWindow {
+.cid-qNag5K0EPK .modalWindow {
   position: fixed;
   z-index: 5000;
   left: 0;
@@ -1406,16 +1406,16 @@ body {
   width: 100%;
   height: 100%;
 }
-.cid-qNa4ZyvOws .modalWindow .modalWindow-container {
+.cid-qNag5K0EPK .modalWindow .modalWindow-container {
   display: table-cell;
   vertical-align: middle;
 }
-.cid-qNa4ZyvOws .modalWindow .modalWindow-video {
+.cid-qNag5K0EPK .modalWindow .modalWindow-video {
   height: calc(44.9943757vw);
   width: 80vw;
   margin: 0 auto;
 }
-.cid-qNa4ZyvOws a.close {
+.cid-qNag5K0EPK a.close {
   position: absolute;
   right: 4vw;
   top: 4vh;
@@ -1426,28 +1426,28 @@ body {
   padding: 20px;
   border-radius: 50%;
 }
-.cid-qNa4ZyvOws a.close:hover {
+.cid-qNag5K0EPK a.close:hover {
   color: #ffffff;
 }
-.cid-qNa53OWKIE {
+.cid-qNaguqVAWO {
   padding-top: 90px;
   padding-bottom: 90px;
   background: linear-gradient(45deg, #232323, #232323);
 }
 @media (min-width: 992px) {
-  .cid-qNa53OWKIE .mbr-figure {
+  .cid-qNaguqVAWO .mbr-figure {
     padding-left: 4rem;
   }
 }
 @media (max-width: 991px) {
-  .cid-qNa53OWKIE .mbr-figure {
+  .cid-qNaguqVAWO .mbr-figure {
     padding-top: 3rem;
   }
 }
-.cid-qNa53OWKIE .mbr-section-title {
+.cid-qNaguqVAWO .mbr-text,
+.cid-qNaguqVAWO .mbr-section-btn {
   text-align: left;
 }
-.cid-qNa53OWKIE .mbr-text,
-.cid-qNa53OWKIE .mbr-section-btn {
+.cid-qNaguqVAWO .mbr-section-title {
   text-align: left;
 }
